# music_player

./: .gitignore  LICENSE  NOTES  README.md  pyproject.toml
player/: NOTES  assign_starts.py  clock_master.py  expressions.py  fix_xml.py  parse_xml.py  player.py  setup  states.py  tie_notes.py  unroll_repeats.py
player/old/: clock_master.py
player/tools/: alsa_test.py  alsa_timer.py  drop_test_receiver.py  drop_test_sender.py  midi_port_test.py  midi_reader.py  midi_spy.py  midi_utils.py  midi_writer.py  queue_start_test.py  set_colors.py  to_xlsx.py  xml_structure.py
tools/: alsa_timer.py  midi_spy.py  xml_structure.py
